Modificato il marker nel block in file

--- a/tasks/modifica_content.yml
+++ b/tasks/modifica_content.yml
@@ -8,6 +8,7 @@
 - name: "Inserisco la sezione mp3 nel file {{ item }} "
   blockinfile:
         backup: true
+        marker: "# {mark} BUG6572"
         path: "{{ item }}"
         block: |
                 audio/mpeg: \
